--- a/memorandum/route/osaka.html
+++ b/memorandum/route/osaka.html
@@ -30,6 +30,7 @@
         onclick="save('kansai', document.getElementById('memSelector').value, kansaiRoutes);">
       <input type="button" value="load"
         onclick="load('kansai', document.getElementById('memSelector').value, kansaiRoutes);">
+      <input type="button" value="init" onclick="init(kansaiRoutes);">
     </div>
     <script type="text/javascript" src="mem.js"></script>
     <div>
