--- a/memorandum/route/osaka.html
+++ b/memorandum/route/osaka.html
@@ -19,18 +19,18 @@
   <script type="text/javascript" src="osaka.js"></script>
 
   <footer>
-    <div>
+    <div class="mem">
       <label>MEM:</label>
-      <select id="memSelector">
+      <select id="memSelector" class="mem">
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
       </select>
-      <input type="button" value="save"
+      <input type="button" value="save" class="mem"
         onclick="save('kansai', document.getElementById('memSelector').value, kansaiRoutes);">
-      <input type="button" value="load"
+      <input type="button" value="load" class="mem"
         onclick="load('kansai', document.getElementById('memSelector').value, kansaiRoutes);">
-      <input type="button" value="init" onclick="init(kansaiRoutes);">
+      <input type="button" value="init" class="mem" onclick="init(kansaiRoutes);">
     </div>
     <script type="text/javascript" src="mem.js"></script>
     <div>
