--- a/memorandum/route/osaka.html
+++ b/memorandum/route/osaka.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width , initial-scale=1 , maximum-scale=1">
   <title>大阪近郊区間経路アシスタント</title>
   <link rel="stylesheet" href="route.css">
 </head>
