--- a/memorandum/route/osaka.html
+++ b/memorandum/route/osaka.html
@@ -30,10 +30,12 @@
         <option value="3">3</option>
       </select>
       <input type="button" value="save" class="mem"
-        onclick="save('kansai', document.getElementById('memSelector').value, kansaiRoutes);">
+        onclick="save('kansai', document.getElementById('memSelector').value, routes);">
       <input type="button" value="load" class="mem"
-        onclick="load('kansai', document.getElementById('memSelector').value, kansaiRoutes);">
-      <input type="button" value="init" class="mem" onclick="init(kansaiRoutes);">
+        onclick="load('kansai', document.getElementById('memSelector').value, routes);">
+      <input type="button" value="init" class="mem" onclick="init(routes);">
+      <input type="button" value="+" class="mem" onclick="drawRoute('kansai', +0.1);">
+      <input type="button" value="-" class="mem" onclick="drawRoute('kansai', -0.1);">
     </div>
     <script type="text/javascript" src="mem.js"></script>
     <div>
