fix: zoom時のroute入力情報保持

--- a/memorandum/route/osaka.html
+++ b/memorandum/route/osaka.html
@@ -34,8 +34,8 @@
       <input type="button" value="load" class="mem"
         onclick="load('kansai', document.getElementById('memSelector').value, routes);">
       <input type="button" value="init" class="mem" onclick="init(routes);">
-      <input type="button" value="+" class="mem" onclick="drawRoute('kansai', +0.1);">
-      <input type="button" value="-" class="mem" onclick="drawRoute('kansai', -0.1);">
+      <input type="button" value="+" class="mem" onclick="zoom('kansai', +0.1);">
+      <input type="button" value="-" class="mem" onclick="zoom('kansai', -0.1);">
     </div>
     <script type="text/javascript" src="mem.js"></script>
     <div>
