--- a/tools/loadLineAnime.html
+++ b/tools/loadLineAnime.html
@@ -8,10 +8,10 @@
 <body>
   <section>
     <h1>線でロード状態を表すアニメ</h1>
-    <input type="number" id="perIn">
+    <input type="number" id="perIn" value="1">
     <input type="button" onclick="a.setPer(document.getElementById('perIn').value);" value="show">
   </section>
-  <script src="./loadingLineAnime.js"></script>
+  <script src="../memorandum/loadingLineAnime.js"></script>
   <script>
     const a = new loadingLineAnime();
   </script>
