--- a/tools/s-clock.html
+++ b/tools/s-clock.html
@@ -56,7 +56,7 @@
             const p2pParam = getParam("p2p");
             if (p2pParam === "1") {
                 const p2pQL = new p2pQuakeListener();
-                a.run();
+                p2pQL.run();
             }
 
             const bgColor = getParam("bg");
